Corrected Animals link on children.html

--- a/children.html
+++ b/children.html
@@ -14,7 +14,7 @@
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="children.html">children</a></li>
-          <li><a href="animal.html">animal</a></li>
+          <li><a href="animals.html">animal</a></li>
         </ul>
       </nav>
 
